--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Claudia Karla Salas Varela</title>
   </head>
   <body>
+
+    <link href="https://fonts.cdnfonts.com/css/afacad" rel="stylesheet">
+                           
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
